Fix return to cargo list button.

--- a/templates/selectItinerary.html
+++ b/templates/selectItinerary.html
@@ -20,5 +20,5 @@
   <div class="panel-footer text-right"><a class="btn btn-primary" ng-click="assignToRoute(it)">Assign cargo to this route</a></div>
 </div>
 
-<a class="btn btn-primary" href="list.html">Return to cargo list</a>
+<a class="btn btn-primary" href="#/list">Return to cargo list</a>
 </div>
