--- a/views/track.html
+++ b/views/track.html
@@ -3,7 +3,8 @@
         <div class="input-group">
             <input type="text" class="form-control" placeholder="Enter tracking ID" name="srch-term" id="srch-term" ng-model="searchQuery" ng-minlength=1>
             <div class="input-group-btn">
-                <button class="btn btn-default" type="submit" ng-click="showCargo(searchQuery)"><i class="glyphicon glyphicon-search"></i>
+                <button class="btn btn-default" type="submit" ng-click="showCargo(searchQuery)">
+                    Track
                 </button>
             </div>
         </div>
