Add missing glyphs in new paper layout.

--- a/views/track.html
+++ b/views/track.html
@@ -4,7 +4,7 @@
             <input type="text" class="form-control" placeholder="Enter tracking ID" name="srch-term" id="srch-term" ng-model="searchQuery" ng-minlength=1>
             <div class="input-group-btn">
                 <button class="btn btn-default" type="submit" ng-click="showCargo(searchQuery)">
-                    Track
+                    <i class="glyphicon glyphicon-search"></i>
                 </button>
             </div>
         </div>
