Minor GUI fixes.

--- a/views/details.html
+++ b/views/details.html
@@ -54,5 +54,5 @@
     </div>
 </div>
 
-<a class="btn" href="#/list">Return to cargo list</a>
+<a class="btn btn-default" href="#/list">Return to cargo list</a>
 </div>
