--- a/views/selectItinerary.html
+++ b/views/selectItinerary.html
@@ -10,7 +10,7 @@
         </thead>
         <tbody>
             <tr ng-repeat="leg in it.legs">
-                <td>{{ leg.voyage }}</td>
+                <td>{{ leg.voyageNumber }}</td>
                 <td>{{ leg.from }}</td>
                 <td>{{ leg.loadTime }}</td>
                 <td>{{ leg.to }}</td>
@@ -22,4 +22,4 @@
     </div>
 </div>
 
-<a class="btn" href="#/list">Return to cargo list</a>
+<a class="btn btn-default" href="#/list">Return to cargo list</a>
