--- a/views/about.html
+++ b/views/about.html
@@ -23,7 +23,7 @@
 	</div>
 	<div class="col-xs-3">
 		<h3>Backend</h3>
-		<p>There are currently one implementation of the backend. Contact me if you want your implementation listed here. Choose the backend you want to use:</p>
+		<p>There is currently one implementation of the backend. Contact me if you want your implementation listed here. Choose the backend you want to use:</p>
 		<div class="btn-group" dropdown ng-controller="SelectBackendCtrl">
 			<button type="button" class="btn btn-default dropdown-toggle" ng-disabled="disabled">
 			    {{ currentBackend.description }}&nbsp;
