Better mobile support.

--- a/views/about.html
+++ b/views/about.html
@@ -5,23 +5,23 @@
 	</div>
 </div>
 <div class="row">
-	<div class="col-xs-3">
+	<div class="col-md-3">
 		<h3>Tracking</h3>
 		<p>This is the view that the customers will see. It allows them to track their cargo along its route.</p>
 		<p><a class="btn btn-primary" href="#/track">Try it</a></p>
 	</div>
-	<div class="col-xs-3">
+	<div class="col-md-3">
 		<h3>Admin</h3>
 		<p>This view is used by the shipping company to manage cargos.</p>
 		<p><a class="btn btn-primary" href="#/list">Try it</a></p>
 	</div>
-	<div class="col-xs-3">
+	<div class="col-md-3">
 		<h3>Incident logging</h3>
 		<p>This is where we log handling events along the route.</p>
 		<p><strong>Currently not implemented yet.</strong></p>
 		<p><a class="btn btn-primary disabled" href="#">Try it</a></p>
 	</div>
-	<div class="col-xs-3">
+	<div class="col-md-3">
 		<h3>Backend</h3>
 		<p>There is currently one implementation of the backend. Contact me if you want your implementation listed here. Choose the backend you want to use:</p>
 		<div class="btn-group" dropdown ng-controller="SelectBackendCtrl">
