--- a/views/details.html
+++ b/views/details.html
@@ -14,7 +14,7 @@
             </tr>
             <tr>
                 <td>Arrival deadline</td>
-                <td>{{ cargo.arrivalDeadline }}</td>
+                <td>{{ cargo.arrivalDeadline | date: 'medium' }}</td>
             </tr>
         </tbody>
     </table>
@@ -38,9 +38,9 @@
                 <tr ng-repeat="leg in cargo.legs">
                     <td>{{ leg.voyageNumber }}</td>
                     <td>{{ leg.from }}</td>
-                    <td>{{ leg.loadTime }}</td>
+                    <td>{{ leg.loadTime | date: 'medium' }}</td>
                     <td>{{ leg.to }}</td>
-                    <td>{{ leg.unloadTime }}</td>
+                    <td>{{ leg.unloadTime | date: 'medium' }}</td>
                 </tr>
             </tbody>
         </table>
