--- a/views/track.html
+++ b/views/track.html
@@ -15,7 +15,7 @@
     <div class="panel-body">
         <div class="col-md-6">
             <h4>Cargo {{ cargo.trackingId }} is now: {{ cargo.statusText}}</h4>
-            <p>Estimated time of arrival in {{ cargo.destination }}: {{ cargo.eta }}</p>
+            <p>Estimated time of arrival in {{ cargo.destination }}: {{ cargo.eta | date: 'medium' }}</p>
             <p>{{ cargo.nextExpectedActivity }}</p>
         </div>
         <div class="col-md-6">
