--- a/views/selectItinerary.html
+++ b/views/selectItinerary.html
@@ -1,25 +1,28 @@
-<h2>Cargo {{ cargo.trackingId }} is going from {{ cargo.origin }} to {{ cargo.destination }}</h2>
-<div class="panel panel-default" ng-repeat="it in routeCandidates">
-    <table class="table table-hover">
-        <thead>
-            <tr>
-                <th>Voyage number</th>
-                <th colspan="2">From</th>
-                <th colspan="2">To</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr ng-repeat="leg in it.legs">
-                <td>{{ leg.voyageNumber }}</td>
-                <td>{{ leg.from }}</td>
-                <td>{{ leg.loadTime | date: 'medium' }}</td>
-                <td>{{ leg.to }}</td>
-                <td>{{ leg.unloadTime | date: 'medium' }}</td>
-            </tr>
-        </tbody>
-    </table>
-    <div class="panel-footer text-right"><a class="btn btn-primary" ng-click="assignToRoute(it)">Assign cargo to this route</a>
+<div class="row">
+    <a class="btn btn-default pull-right" href="#/details?trackingId={{ cargo.trackingId }}">Return to cargo details</a>
+</div>
+<div class="row">
+    <h2>Cargo {{ cargo.trackingId }} is going from {{ cargo.origin }} to {{ cargo.destination }}</h2>
+    <div class="panel panel-default" ng-repeat="it in routeCandidates">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>Voyage number</th>
+                    <th colspan="2">From</th>
+                    <th colspan="2">To</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="leg in it.legs">
+                    <td>{{ leg.voyageNumber }}</td>
+                    <td>{{ leg.from }}</td>
+                    <td>{{ leg.loadTime | date: 'medium' }}</td>
+                    <td>{{ leg.to }}</td>
+                    <td>{{ leg.unloadTime | date: 'medium' }}</td>
+                </tr>
+            </tbody>
+        </table>
+        <div class="panel-footer text-right"><a class="btn btn-primary" ng-click="assignToRoute(it)">Assign cargo to this route</a>
+        </div>
     </div>
 </div>
-
-<a class="btn btn-default" href="#/list">Return to cargo list</a>
