Improve Bootstrap grid layout.

--- a/views/details.html
+++ b/views/details.html
@@ -1,8 +1,11 @@
 <div class="row">
-    <a class="btn btn-default pull-right" href="#/list">Return to cargo list</a>
+    <div class="col-xs-12">
+        <a class="btn btn-default pull-right" href="#/list">Return to cargo list</a>
+    </div>
 </div>
 <div class="row">
-    <div ng-show="cargo">
+
+    <div class="col-xs-12" ng-show="cargo">
         <h2>Details for {{ cargo.trackingId }}</h2>
         <table class="table">
             <tbody>
