--- a/views/bookCargo.html
+++ b/views/bookCargo.html
@@ -4,7 +4,7 @@
 <div class="modal-body">
     <form class="form-horizontal" role="form">
         <div class="form-group">
-            <label class="col-sm-4 control-label">Origin</label>
+            <label class="control-label">Origin</label>
             <div class="btn-group" dropdown>
                 <button type="button" class="btn btn-default dropdown-toggle" ng-disabled="disabled">
                     {{ selectedOrigin }}&nbsp;
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-4 control-label">Destination</label>
+            <label class="control-label">Destination</label>
             <div class="btn-group" dropdown>
                 <button type="button" class="btn btn-default dropdown-toggle" ng-disabled="disabled">
                     {{ selectedDestination }}&nbsp;
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-4 control-label">Arrival deadline</label>
+            <label class="control-label">Arrival deadline</label>
             <datepicker ng-model="deadline" show-weeks="false"></datepicker>
         </div>
     </form>
