--- a/views/track.html
+++ b/views/track.html
@@ -1,5 +1,5 @@
 <div class="row" style="margin-bottom: 20px;">
-    <div class="col-xs-12">
+    <div class="col-xs-4 col-xs-offset-4">
         <form role="form">
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Enter tracking ID" ng-model="searchQuery" ng-minlength=1>
@@ -9,6 +9,7 @@
                     </button>
                 </span>
             </div>
+            <small>Hint: Try 'ABC123'</small>
         </form>
     </div>
 </div>
