Add incident logging view.

--- a/views/about.html
+++ b/views/about.html
@@ -20,12 +20,9 @@
         </p>
     </div>
     <div class="col-xs-12 col-md-3">
-        <h3>Incident logging</h3>
+        <h3>Incident Logging</h3>
         <p>This is where we log handling events along the route.</p>
-        <p>
-            <strong>Currently not implemented yet.</strong>
-        </p>
-        <p><a class="btn btn-primary disabled" href="#">Try it</a>
+        <p><a class="btn btn-primary" href="#/log">Try it</a>
         </p>
     </div>
     <div class="col-xs-12 col-md-3">
