Add Incident Logging view.

--- a/views/about.html
+++ b/views/about.html
@@ -21,7 +21,7 @@
     </div>
     <div class="col-xs-12 col-md-3">
         <h3>Incident Logging</h3>
-        <p>This is where we log handling events along the route.</p>
+        <p>This is where we register handling events along the route.</p>
         <p><a class="btn btn-primary" href="#/log">Try it</a>
         </p>
     </div>
