--- a/views/changeDestination.html
+++ b/views/changeDestination.html
@@ -4,8 +4,8 @@
 <div class="modal-body">
     <form class="form-horizontal" role="form">
         <div class="form-group">
-            <label class="control-label">New Destination</label>
-            <div class="btn-group" dropdown>
+            <label class="col-sm-4 control-label">New Destination</label>
+            <div class="col-sm-8 btn-group" dropdown>
                 <button type="button" class="btn btn-default dropdown-toggle" ng-disabled="disabled">
                     {{ selectedDestination }}&nbsp;
                     <span class="caret"></span>
