Improve introduction text on documentation page.

--- a/views/documentation.html
+++ b/views/documentation.html
@@ -1,7 +1,7 @@
 <h2>REST API</h2>
 <div class="row">
     <div class="col-xs-12">
-		The application exposes a REST API.
+		In order to make use of this application, your backend must publish the REST API described on this page. Since this is a learning platform the API is subject to change without notice. If you have any suggestions on how to improve the API, make sure you let me know!
 
 		<h3>Cargos</h3>
 
