Update to new API

--- a/views/bookCargo.html
+++ b/views/bookCargo.html
@@ -38,7 +38,7 @@
     </form>
 </div>
 <div class="modal-footer">
-    <label ng-show="bookedCargo">Booked cargo with tracking ID {{ bookedCargo.trackingId }}</label>
+    <label ng-show="bookedCargo">Booked cargo with tracking ID {{ bookedCargo.tracking_id }}</label>
     <button type="button" class="btn btn-default" ng-click="cancel()">Close</button>
     <button type="button" class="btn btn-primary" ng-click="bookCargo()">Book</button>
 </div>
