--- a/views/list.html
+++ b/views/list.html
@@ -16,7 +16,7 @@
             </thead>
             <tbody>
                 <tr ng-repeat="c in cargos" class="repeated-item">
-                    <td><a href="#/details?trackingId={{ c.trackingId }}">{{ c.trackingId }}</a>
+                    <td><a href="#/details?trackingId={{ c.tracking_id }}">{{ c.tracking_id }}</a>
                     </td>
                     <td>{{ c.origin }}</td>
                     <td>{{ c.destination }}</td>
