--- a/views/selectItinerary.html
+++ b/views/selectItinerary.html
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="col-xs-12">
-        <a class="btn btn-default pull-right" href="#/details?trackingId={{ cargo.trackingId }}">Return to cargo details</a>
+        <a class="btn btn-default pull-right" href="#/details?tracking_id={{ cargo.tracking_id }}">Return to cargo details</a>
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <h2>Cargo {{ cargo.trackingId }} is going from {{ cargo.origin }} to {{ cargo.destination }}</h2>
+        <h2>Cargo {{ cargo.tracking_id }} is going from {{ cargo.origin }} to {{ cargo.destination }}</h2>
         <div class="panel panel-default" ng-repeat="it in routeCandidates">
             <table class="table table-hover">
                 <thead>
@@ -17,11 +17,11 @@
                 </thead>
                 <tbody>
                     <tr ng-repeat="leg in it.legs">
-                        <td>{{ leg.voyageNumber }}</td>
+                        <td>{{ leg.voyage_number }}</td>
                         <td>{{ leg.from }}</td>
-                        <td>{{ leg.loadTime | date: 'medium' }}</td>
+                        <td>{{ leg.load_time | date: 'medium' }}</td>
                         <td>{{ leg.to }}</td>
-                        <td>{{ leg.unloadTime | date: 'medium' }}</td>
+                        <td>{{ leg.unload_time | date: 'medium' }}</td>
                     </tr>
                 </tbody>
             </table>
