--- a/views/track.html
+++ b/views/track.html
@@ -18,9 +18,9 @@
         <div class="panel panel-default" ng-show="cargo">
             <div class="panel-body">
                 <div class="col-md-6">
-                    <h4>Cargo {{ cargo.trackingId }} is now: {{ cargo.statusText}}</h4>
+                    <h4>Cargo {{ cargo.tracking_id }} is now: {{ cargo.status_text}}</h4>
                     <p>Estimated time of arrival in {{ cargo.destination }}: {{ cargo.eta | date: 'medium' }}</p>
-                    <p>{{ cargo.nextExpectedActivity }}</p>
+                    <p>{{ cargo.next_expected_activity }}</p>
                 </div>
                 <div class="col-md-6">
                     <h5 class="text-uppercase">Handling history</h5>
