--- a/views/details.html
+++ b/views/details.html
@@ -6,7 +6,7 @@
 <div class="row">
 
     <div class="col-xs-12" ng-show="cargo">
-        <h2>Details for {{ cargo.trackingId }}</h2>
+        <h2>Details for {{ cargo.tracking_id }}</h2>
         <table class="table">
             <tbody>
                 <tr>
